[package]
name = "jsrmx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
rayon = "1.10.0"
regex = "1.5.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.2"
