[package]
name = "jsrmx"
description = "A command-line tool to manipulate JSON files. It can split large single-object JSON files into many files; merge multiple JSON files into one large JSON file; bundle multiple JSON files into one NDJSON file, and unbundle one NDJSON file into many JSON files."
repository = "https://github.com/VimCommando/jsrmx"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
eyre = "0.6.12"
log = "0.4.21"
rayon = "1.10.0"
regex = "1.5.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.2"
